# pace25

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build_optil.sh  docker-compose.yaml  verify_all_solutions.sh
analysis/: grid-gen.py  visualize.py
instances/: best_known_solutions.csv
instances/tiny/: bremen_subgraph_100.gr  bremen_subgraph_150.gr  bremen_subgraph_20.gr  bremen_subgraph_200.gr  bremen_subgraph_250.gr  bremen_subgraph_300.gr  bremen_subgraph_50.gr  test.gr
pace-eval-ds/: Dockerfile  build.sh
pace-eval-ds-heuristic/: Dockerfile
pace-eval-ds/src/: eval.py
rust_on_ubuntu/: Dockerfile
scripts/: compare_benchmarks.py  parbench_forced_removals.py  plot_forced_rules.py
solver_description/: article.bib  article.tex  socg-lipics-v2021.cls
src/: algorithm.rs  errors.rs  lib.rs  log.rs  testing.rs
src/exact/: branch_and_bound.rs  contract_all.rs  contraction_sequence.rs  ext_maxsat.rs  highs.rs  highs_advanced.rs  highs_sub.rs  mod.rs  naive.rs  reductions.rs  sat_solver.rs  twin_width_sat_encoding.rs  two_stage_sat_solver.rs
src/exact/branch_and_bound/: mod.rs
src/exact/branch_and_bound/frame/: contractions.rs  mod.rs
src/exact/branch_and_bound/kernelization/: leaves.rs  mod.rs  pairs.rs  twins.rs
src/graph/: absolute_twin_width_sat_encoding.rs  adj_array.rs  adj_list.rs  bipartite.rs  bitset.rs  bridges.rs  color_filter.rs  complement.rs  connectivity.rs  csr.rs  cut_vertex.rs  cuthill_mckee.rs  distance_two_pairs.rs  edge.rs  gnp.rs  graph_digest.rs  graph_tests.rs  heuristic_cuts.rs  matrix.rs  mod.rs  modules.rs  node_mapper.rs  pace_reader.rs  partition.rs  path_iterator.rs  relabel.rs  relative_twin_width_sat_encoding.rs  sliced_buffer.rs  subgraph.rs  traversal.rs  twin_width_sat_encoding.rs  weisfeiler_lehman.rs
src/heuristic/: .reverse_greedy_search.rs.swp  contraction_refiner.rs  dmls.rs  ensemble_solver.rs  greedy.rs  iterative_greedy.rs  lower_bound_lb1.rs  lower_bounds.rs  markov_search_tree.rs  mod.rs  monte_carlo_search_tree.rs  partial_monte_carlo_search_tree.rs  reverse_greedy_search.rs  subsets.rs  sweep_solver.rs
src/io/: dot_writer.rs  edgelist_writer.rs  mod.rs  pace_reader.rs  pace_writer.rs  set_reader.rs
src/kernelization/: leaves.rs  long_path.rs  mod.rs  pairs.rs  rule1.rs  rule_one_reduction.rs  subsets.rs  tree.rs  twins.rs  two_paths.rs
src/reduction/: articulation.rs  isolated.rs  long_path.rs  mod.rs  red_cover.rs  red_triangle.rs  red_twin.rs  reducer.rs  redundant_subset.rs  rule_one_reduction.rs  small_exact.rs  subset.rs  subset_rule_two.rs  two_hop_rule_two_reduction.rs  vertex_cover.rs
src/utils/: contraction_sequence.rs  dominating_set.rs  insertion_tree.rs  intersection_forest.rs  intersection_tree.rs  marker.rs  merge_tree.rs  mod.rs  radix.rs  result_cache.rs  sampler.rs
stream-bitset/: Cargo.toml
stream-bitset/src/: bitmask.rs  bitmask_stream.rs  bitmask_stream_consumer.rs  bitset.rs  bitset_array.rs  bitset_macros.rs  bitset_shard.rs  lib.rs
