[package]
name = "dss"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
goodlp = ["good_lp"]
par = ["rayon"]


[dependencies]
glob="0.3"
itertools="0.10"
rand="0.8"
rand_pcg="0.3"
rand_distr="0.4"
paste = "1.0"
fxhash="0.2"
rayon={version= "1.6", optional=true}
digest = "0.10.0"
sha2 = "0.10.0"
log = "0.4"
env_logger = "0.9"
ctrlc = { version = "3.1.9", features = ["termination"] }
stream_bitset = { path="stream-bitset" }
anyhow = "1.0.95"
good_lp = { version = "1.11.0",  optional = true }
num = "0.4.3"
array-init = "2.1.0"
structopt = "0.3.26"
smallvec = "1.13.2"
thiserror = "2.0.12"
tempfile = "3.19.1"

[dev-dependencies]
regex = "1.11.1"
rayon={version= "1.6"}

[profile.release]
lto="fat"
codegen-units=1
debug=true

[profile.optil]
inherits="release"
lto="fat"
codegen-units=1
debug=false
panic="abort"
strip=true

[[bin]]
name = "heuristic"
path = "src/bin/heuristic_solver.rs"
test = false

[[bin]]
name = "heuristic_bench"
path = "src/bin/heuristic_solver_bench.rs"
test = false

[[bin]]
name = "exact"
path = "src/bin/exact_solver.rs"
required-features = ["par"]
test = false

[[bin]]
name = "heuristic_relabel_bench"
path = "src/bin/heuristic_solver_relabel_bench.rs"
required-features = ["signal-handling"]
test = false
